Closed Bug 258801 Opened 20 years ago Closed 19 years ago

it doesn't build if a patch isn't applied on nsProfileMigrator.cpp

Categories

(Thunderbird :: Migration, defect)

x86
BeOS
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: batuque, Assigned: mscott)

References

Details

Attachments

(1 obsolete file)

User-Agent:       Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.8a3) Gecko/20040829
Build Identifier: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.8a3) Gecko/20040829

at ImportRegistryProfiles it should be added:

#elif defined(XP_BEOS)
  rv = dirService->Get(NS_BEOS_SETTINGS_DIR, NS_GET_IID(nsILocalFile),
                       getter_AddRefs(regFile));
  NS_ENSURE_SUCCESS(rv, PR_FALSE);
  regFile->AppendNative(aAppName);
  regFile->AppendNative(NS_LITERAL_CSTRING("appreg"));

Reproducible: Always
Steps to Reproduce:
1. Try to build Thunderbird for BeOS
2.
3.

Actual Results:  
It doesn't build.

Expected Results:  
a Thunderbird build.
I forgot to say that the file nsProfileMigrator.cpp is the one placed at
mozilla/mail/components/migration/src
Summary: it doesn't build if a patch isn't applied on nsProfileMigrator.cpp → it doesn't build if a patch isn't applied on nsProfileMigrator.cpp
Attached patch a defined for a BeOS build (obsolete) — Splinter Review
Comment on attachment 158496 [details] [diff] [review]
a defined for a BeOS build

review request
Attachment #158496 - Flags: review?(sergei_d)
Blocks: 258806
No longer blocks: 258806
Blocks: 258806
See comment
http://bugzilla.mozilla.org/show_bug.cgi?id=258804#c3

If we decide that we need this mail migration for (future) sake, i'll review
both patches, but maybe better idea is get rid from all that for ever?:)
You mean not build migration at all?

I don't know if there is a flag for that. If there isn't it's hard to build
without bug 258801, 258804, 258806
Saw your post in bug 258804 and I think it would be a good idea if it's able to
work without it.
(In reply to comment #6)
> Saw your post in bug 258804 and I think it would be a good idea if it's able to
> work without it.
I'd set topic in Bezilla blog about the problem:
http://www.livejournal.com/community/bezilla/52509.html
Maybe it is reasonable to allow such kind of Be mail "import" into gecko family
apps. E.g in order to move/copy BeOS mail data to windows/linux. That's why i
asked you there about explanations. E.g. ig this feature allows complete (with
mail messages) account import.

Comment on attachment 158496 [details] [diff] [review]
a defined for a BeOS build

r=sergei_d@fi.tartu.ee
Attachment #158496 - Flags: review?(sergei_d) → review+
What's the status of this bug?
Status: UNCONFIRMED → NEW
Ever confirmed: true
I assume it's still there and needs fixing, but I don't work on Thunderbird.
Comment on attachment 158496 [details] [diff] [review]
a defined for a BeOS build

timeless, are you allowed to sr Thunderbird BeOS bugs?
(also need someone for checkin)
Attachment #158496 - Flags: superreview?(timeless)
well, it's clearly in an ifdef, but i'm neither an sr nor anything in thunderbird. i have no idea if there are 
porting graces allowed for this product.
Attachment #158496 - Flags: superreview?(timeless) → superreview?(mscott)
Attachment #158496 - Flags: superreview?(mscott) → superreview+
Comment on attachment 158496 [details] [diff] [review]
a defined for a BeOS build

mozilla/mail/components/migration/src/nsProfileMigrator.cpp 	1.9
Attachment #158496 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: