Bug 258801 it doesn't build if a patch isn't applied on nsProfileMigrator.cpp patch by fvincent@bol.com.br r=sergei_d sr=mscott